@@ -4,8 +4,14 @@ import java.io.IOException;
 import java.net.InetAddress;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.*;
+import java.nio.file.attribute.FileTime;
+import java.time.Duration;
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Objects;
 import java.util.function.Function;
 
 import com.devonfw.tools.ide.cli.CliArgument;
@@ -114,6 +120,8 @@ public abstract class AbstractIdeContext implements IdeContext {
 
   private UrlMetadata urlMetadata;
 
+  private static final Duration GIT_PULL_CACHE_DELAY_MILLIS = Duration.ofMillis(30 * 60 * 1000);
+
   /**
    * The constructor.
    *
@@ -132,7 +140,7 @@ public abstract class AbstractIdeContext implements IdeContext {
     this.fileAccess = new FileAccessImpl(this);
     String workspace = WORKSPACE_MAIN;
     if (userDir == null) {
-      this.cwd = Paths.get(System.getProperty("user.dir"));
+      this.cwd = Path.of(System.getProperty("user.dir"));
     } else {
       this.cwd = userDir.toAbsolutePath();
     }
@@ -175,7 +183,7 @@ public abstract class AbstractIdeContext implements IdeContext {
         root = System.getenv("IDE_ROOT");
       }
       if (root != null) {
-        Path rootPath = Paths.get(root);
+        Path rootPath = Path.of(root);
         if (Files.isDirectory(rootPath)) {
           if (!ideRootPath.equals(rootPath)) {
             warning("Variable IDE_ROOT is set to '{}' but for your project '{}' would have been expected.");
@@ -215,12 +223,12 @@ public abstract class AbstractIdeContext implements IdeContext {
     if (isTest()) {
       // only for testing...
       if (this.ideHome == null) {
-        this.userHome = Paths.get("/non-existing-user-home-for-testing");
+        this.userHome = Path.of("/non-existing-user-home-for-testing");
       } else {
         this.userHome = this.ideHome.resolve("home");
       }
     } else {
-      this.userHome = Paths.get(System.getProperty("user.home"));
+      this.userHome = Path.of(System.getProperty("user.home"));
     }
     this.userHomeIde = this.userHome.resolve(".ide");
     this.downloadPath = this.userHome.resolve("Downloads/ide");
@@ -488,7 +496,7 @@ public abstract class AbstractIdeContext implements IdeContext {
 
     if (this.urlMetadata == null) {
       if (!isTest()) {
-        gitPullOrClone(this.urlsPath, "https://github.com/devonfw/ide-urls.git");
+        gitPullOrCloneIfNeeded(this.urlsPath, "https://github.com/devonfw/ide-urls.git");
       }
       this.urlMetadata = new UrlMetadata(this);
     }
@@ -604,7 +612,7 @@ public abstract class AbstractIdeContext implements IdeContext {
     }
     ProcessContext pc = newProcess().directory(target).executable("git").withEnvVar("GIT_TERMINAL_PROMPT", "0");
     if (Files.isDirectory(target.resolve(".git"))) {
-      ProcessResult result = pc.addArg("remote").run(true);
+      ProcessResult result = pc.addArg("remote").run(true, false);
       List<String> remotes = result.getOut();
       if (remotes.isEmpty()) {
         String message = "This is a local git repo with no remote - if you did this for testing, you may continue...\n"
@@ -612,7 +620,7 @@ public abstract class AbstractIdeContext implements IdeContext {
         askToContinue(message);
       } else {
         pc.errorHandling(ProcessErrorHandling.WARNING);
-        result = pc.addArg("pull").run(false);
+        result = pc.addArg("pull").run(false, false);
         if (!result.isSuccessful()) {
           String message = "Failed to update git repository at " + target;
           if (this.offlineMode) {
@@ -650,6 +658,45 @@ public abstract class AbstractIdeContext implements IdeContext {
         pc.addArgs("checkout", branch);
         pc.run();
       }
+    }
+  }
+
+  /**
+   * Checks if the Git repository in the specified target folder needs an update by inspecting the modification time of
+   * a magic file.
+   *
+   * @param urlsPath The Path to the Urls repository.
+   * @param repoUrl The git remote URL of the Urls repository.
+   */
+
+  private void gitPullOrCloneIfNeeded(Path urlsPath, String repoUrl) {
+
+    Path gitDirectory = urlsPath.resolve(".git");
+
+    // Check if the .git directory exists
+    if (Files.isDirectory(gitDirectory)) {
+      Path magicFilePath = gitDirectory.resolve("HEAD");
+      long currentTime = System.currentTimeMillis();
+      // Get the modification time of the magic file
+      long fileMTime;
+      try {
+        fileMTime = Files.getLastModifiedTime(magicFilePath).toMillis();
+      } catch (IOException e) {
+        throw new IllegalStateException("Could not read " + magicFilePath, e);
+      }
+
+      // Check if the file modification time is older than the delta threshold
+      if ((currentTime - fileMTime > GIT_PULL_CACHE_DELAY_MILLIS.toMillis()) || isForceMode()) {
+        gitPullOrClone(urlsPath, repoUrl);
+        try {
+          Files.setLastModifiedTime(magicFilePath, FileTime.fromMillis(currentTime));
+        } catch (IOException e) {
+          throw new IllegalStateException("Could not read or write in " + magicFilePath, e);
+        }
+      }
+    } else {
+      // If the .git directory does not exist, perform git clone
+      gitPullOrClone(urlsPath, repoUrl);
     }
   }
 
@@ -765,8 +812,9 @@ public abstract class AbstractIdeContext implements IdeContext {
   }
 
   /**
-   * @param cmd the potential {@link Commandlet} to {@link #apply(CliArguments, Commandlet, CompletionCandidateCollector) apply} and
-   *        {@link Commandlet#run() run}.
+   * @param cmd the potential {@link Commandlet} to
+   *        {@link #apply(CliArguments, Commandlet, CompletionCandidateCollector) apply} and {@link Commandlet#run()
+   *        run}.
    * @return {@code true} if the given {@link Commandlet} matched and did {@link Commandlet#run() run} successfully,
    *         {@code false} otherwise (the {@link Commandlet} did not match and we have to try a different candidate).
    */
@@ -814,7 +862,7 @@ public abstract class AbstractIdeContext implements IdeContext {
       if (firstCandidate != null) {
         matches = apply(arguments.copy(), firstCandidate, collector);
       } else if (current.isCombinedShortOption()) {
-        collector.add(keyword, null, null);
+        collector.add(keyword, null, null, null);
       }
       if (!matches) {
         for (Commandlet cmd : this.commandletManager.getCommandlets()) {
@@ -824,9 +872,7 @@ public abstract class AbstractIdeContext implements IdeContext {
         }
       }
     }
-    List<CompletionCandidate> candidates = collector.getCandidates();
-    Collections.sort(candidates);
-    return candidates;
+    return collector.getSortedCandidates();
   }
 
   /**
