@@ -4,7 +4,12 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.*;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Stream;
 
 import com.devonfw.tools.ide.cli.CliException;
@@ -27,7 +32,7 @@ public abstract class PluginBasedCommandlet extends LocalToolCommandlet {
    * @param context the {@link IdeContext}.
    * @param tool the {@link #getName() tool name}.
    * @param tags the {@link #getTags() tags} classifying the tool. Should be created via {@link Set#of(Object) Set.of}
-   * method.
+   *        method.
    */
   public PluginBasedCommandlet(IdeContext context, String tool, Set<Tag> tags) {
 
@@ -54,6 +59,7 @@ public abstract class PluginBasedCommandlet extends LocalToolCommandlet {
   }
 
   private void loadPluginsFromDirectory(Map<String, PluginDescriptor> map, Path pluginsPath) {
+
     if (Files.isDirectory(pluginsPath)) {
       try (Stream<Path> childStream = Files.list(pluginsPath)) {
         Iterator<Path> iterator = childStream.iterator();
@@ -93,6 +99,9 @@ public abstract class PluginBasedCommandlet extends LocalToolCommandlet {
     return false;
   }
 
+  /**
+   * @return the {@link Path} to the folder with the plugin configuration files inside the settings.
+   */
   protected Path getPluginsConfigPath() {
 
     return this.context.getSettingsPath().resolve(this.tool).resolve(IdeContext.FOLDER_PLUGINS);
@@ -100,7 +109,7 @@ public abstract class PluginBasedCommandlet extends LocalToolCommandlet {
 
   private Path getUserHomePluginsConfigPath() {
 
-    return context.getUserHome().resolve(Paths.get(".ide", "settings", this.tool, IdeContext.FOLDER_PLUGINS));
+    return this.context.getUserHome().resolve(Path.of(".ide", "settings", this.tool, IdeContext.FOLDER_PLUGINS));
   }
 
   /**
